<?xml version="1.0" encoding="utf-8"?>
<!--    added-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E7FFD4"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="24dp"
    tools:context=".Sign_Up_Activity">

    <LinearLayout
        android:id="@+id/phone_sign_up_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="100dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="96dp"
            android:layout_height="102dp"
            android:layout_gravity="center"
            android:background="@null"
            android:contentDescription="@string/whatsapp_logo"
            app:srcCompat="@drawable/imgg1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/enter_login_details"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <!--        android:shadowColor="#0a0a0a"-->
        <!--        android:shadowRadius="1"-->
        <!--        android:shadowDy="2"-->
        <!--        android:shadowDx="3" -->


        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/background_editext"
            android:ems="10"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:paddingStart="15dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/background_editext"
            android:ems="10"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:paddingStart="15dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/createNewAccount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:gravity="right"
            android:text="@string/don_t_have_an_account_sign_up"
            android:textColor="#075E54"
            android:textStyle="bold" />

        <Button
            android:id="@+id/sign_in"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/green"
            android:padding="15dp"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:cornerRadius="10dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="Other Sign In Options"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                android:layout_margin="5dp"
                android:elevation="10dp">

                <ImageView
                    android:id="@+id/btn_google"
                    android:layout_width="165dp"
                    android:layout_height="55dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:padding="0dp"
                    app:srcCompat="@drawable/google_logo_removebg" />
            </androidx.cardview.widget.CardView>


            <Button
                android:id="@+id/btnfb"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:backgroundTint="#4267B2"
                android:padding="17dp"
                android:text="@string/facebook"
                app:cornerRadius="8dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/phone_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:text="Sign Up with  Phone Number"
            android:textColor="#075E54"
            android:textStyle="bold" />


    </LinearLayout>
</ScrollView>